@@ -1,3 +1,10 @@
+=======================================
+Changes from BWAPI 3.5.1 to BWAPI 3.5.2
+=======================================
+
+Bug Fixes:
+    * Fixed an issue/regression where auto-menu failed to work for replays. 
+
 ==========================================
 Changes from BWAPI Beta 3.5 to BWAPI 3.5.1
 ==========================================
